<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Signup2">

    <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">


        <TextView
                android:text="Almost there !! "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/almost_there" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="104dp"
                app:layout_constraintTop_toTopOf="parent"
                android:lineSpacingExtra="30sp" android:fontFamily="@font/roboto_medium"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/almost_there"
                android:layout_marginTop="70dp">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/pwd_layer"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/pwd_from_signup2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:fontFamily="@font/roboto_medium"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:id="@+id/re_pwd_layer"
                    android:hint="@string/re_pwd"
            >
                <android.support.design.widget.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/re_pwd_from_signup2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:fontFamily="@font/roboto_medium"/>
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                <android.support.design.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:id="@+id/finish"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/register_now"
                        android:backgroundTint="@color/colorPrimaryDark" android:fontFamily="@font/roboto_medium"/>

                <android.support.design.button.MaterialButton
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/back"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_toStartOf="@id/finish"
                        android:layout_toLeftOf="@id/finish" android:fontFamily="@font/roboto_medium"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>