<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Signup">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center">


        <TextView
                android:text="Welcome To Facefood"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="104dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="30sp" android:gravity="center"
                android:fontFamily="@font/roboto_medium"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      tools:layout_editor_absoluteX="195dp" android:layout_marginTop="90dp"
                      app:layout_constraintTop_toBottomOf="@+id/textView2" android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal" android:gravity="center">

                <android.support.design.widget.TextInputLayout
                        android:layout_weight=".6"
                        android:id="@+id/firstName_layer"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        app:layout_constraintLeft_toLeftOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName" android:id="@+id/first_name"
                            android:fontFamily="@font/roboto_medium"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/lastName_layer"
                        app:boxStrokeColor="@color/colorPrimaryDark"
                        android:layout_weight=".6"
                        android:layout_marginLeft="5dp"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                    <android.support.design.widget.TextInputEditText
                            android:inputType="textPersonName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/last_name"
                            android:fontFamily="@font/roboto_medium"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layer"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <android.support.design.widget.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/email"
                        android:fontFamily="@font/roboto_medium"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                <android.support.design.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:id="@+id/next_button"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/next"
                        android:backgroundTint="@color/colorPrimaryDark" android:fontFamily="@font/roboto_medium"/>

                <android.support.design.button.MaterialButton
                        android:id="@+id/login_from_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/login"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_toStartOf="@id/next_button"
                        android:layout_toLeftOf="@id/next_button" android:fontFamily="@font/roboto_medium"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>